Add hightlights tabs styles, structure

--- a/src/sass/_highlights.scss
+++ b/src/sass/_highlights.scss
@@ -1,5 +1,5 @@
 //
-// slider home
+// highlights home
 // --------------------
 
 .mc-highlights {
@@ -117,3 +117,12 @@
     }
   }
 }
+
+//
+// highlights tabs home
+// --------------------
+
+.mc-highlights-tabs {
+  padding-top: 110px;
+}
+
