Add hightlights tabs styles

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -14,6 +14,7 @@ $c-blue-dark : #0F314B;
 $c-blue-light : #98C7EB;
 $c-gray : #F7F7F7;
 $c-gray2 : #9FACB7;
+$c-gray3 : #707070;
 
 //layout
 $header-secondary-bg-color : #053A64;
