Add home pics of the day tabs styles, structure

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -15,6 +15,7 @@ $c-blue-light : #98C7EB;
 $c-gray : #F7F7F7;
 $c-gray2 : #9FACB7;
 $c-gray3 : #707070;
+$c-gray4 : #BCBDC1;
 
 //layout
 $header-secondary-bg-color : #053A64;
