--- a/src/sass/_news.scss
+++ b/src/sass/_news.scss
@@ -2,7 +2,8 @@
 // home - latest news
 // --------------------
 
-.mc-latestnews {
+.mc-latestnews,
+.mc-default {
   background-color: $c-gray;
   padding-bottom: 47px;
   padding-top: 80px;
