Add our presence tabs styles, structure

--- a/src/sass/_highlights.scss
+++ b/src/sass/_highlights.scss
@@ -122,7 +122,8 @@
 // highlights tabs home
 // --------------------
 
-.mc-highlights-tabs {
+.mc-highlights-tabs,
+.mc-ourpresence {
   padding-bottom: 80px;
   padding-top: 110px;
 
