--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,7 @@
 @import "_slider";
 @import "_highlights";
 @import "_news";
+@import "ourpresence";
 
 
 //
@@ -32,6 +33,10 @@ body {
 
 p {
   font-size: responsive;
+}
+
+main {
+  padding-bottom: 130px;
 }
 
 // REMOVER
