Add activities structure and styles

--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -54,6 +54,7 @@
       content: '';
       display: block;
       height: 40px;
+      left: 0;
       position: absolute;
       top: 0;
       z-index: -1;
