--- a/src/sass/_activities.scss
+++ b/src/sass/_activities.scss
@@ -45,4 +45,14 @@
   &--eventos {
     padding-bottom: 75px;
   }
+
+  &--calendar {
+    background-color: rgba($c-gray4, .2);
+    padding-bottom: 75px;
+    padding-top: 110px;
+  }
+
+  &--projects {
+    padding-top: 85px;
+  }
 }
