--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -9,13 +9,14 @@ $header-bg-color : #000;
 $c-white : #fff;
 $c-black : #000;
 $c-blue: #3C82B9;
-$c-blue-medium : #3C82B9;
+$c-blue-medium : red;
 $c-blue-dark : #0F314B;
 $c-blue-light : #98C7EB;
 $c-gray : #F7F7F7;
 $c-gray2 : #9FACB7;
 $c-gray3 : #707070;
 $c-gray4 : #BCBDC1;
+$c-gray5 : #B4B4B4;
 
 //layout
 $header-secondary-bg-color : #053A64;
