--- a/src/sass/_highlights.scss
+++ b/src/sass/_highlights.scss
@@ -52,7 +52,7 @@
     }
 
     &-inner {
-      background-color: $c-blue-medium;
+      background-color: $c-blue;
       height: 140px;
 
       & > .carousel-item {
