--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -34,13 +34,7 @@ $footer-social-color: #3C82B9;
 $footer-border-color: #204867;
 $footer-sep-color: #17405F;
 
-// default bootstrap variables
-$grid-float-breakpoint: 768px;
-$grid-gutter-width: 30px;
-$navbar-height: 50px;
-$zindex-navbar-fixed: 1030;
-
-// module variables
-$navbar_secondary--height: 50px !default;
-$navbar_secondary--z-index: $zindex-navbar-fixed - 1;
-$navbar_secondary--padding-uncollapsed: 0; // $grid-gutter-width
+$calendar1-bg-color: #3C82B9;
+$calendar2-bg-color: #326995;
+$calendar3-bg-color: #3974A3;
+$calendar-startend-color: #9EC1DC;
