--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -17,6 +17,7 @@ $c-gray2 : #9FACB7;
 $c-gray3 : #707070;
 $c-gray4 : #BCBDC1;
 $c-gray5 : #B4B4B4;
+$c-gray6 : #F8F7F8;
 
 //layout
 $header-secondary-bg-color : #053A64;
