--- a/src/sass/_activities.scss
+++ b/src/sass/_activities.scss
@@ -119,6 +119,10 @@
     @media (min-width: 576px) {
       margin-bottom: 90px;
     }
+
+    &--space30 {
+      margin-bottom: 30px;
+    }
   }
 
   &__card {
