Add events single structure and styles

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,8 +19,9 @@
 @import "_slider";
 @import "_highlights";
 @import "_news";
-@import "ourpresence";
-@import "activities";
+@import "_ourpresence";
+@import "_activities";
+@import "_single";
 
 
 //
