--- a/src/sass/_activities.scss
+++ b/src/sass/_activities.scss
@@ -87,14 +87,25 @@
       }
 
       &-text {
+        color: $c-white;
         font: {
           size: 16px;
           weight: normal;
         }
         line-height: 20px;
         margin-top: 15px;
+
+        &:hover {
+          color: $c-white;
+        }
       }
     }
+  }
+
+  &--calendar-bg {
+    background-color: transparent;
+    padding-bottom: 0;
+    padding-top: 0;
   }
 
   &--projects {
