--- a/src/sass/_news.scss
+++ b/src/sass/_news.scss
@@ -132,3 +132,36 @@
     }
   }
 }
+
+//
+// news - principal
+// --------------------
+
+.mc-news--full {
+  background-color: $c-gray;
+
+  .container-fluid, .row, .col {
+    margin: 0;
+    padding: 0;
+  }
+
+  .col {
+    border-left: solid 3px $c-white;
+
+    &:first-child {
+      border: 0;
+    }
+  }
+
+  .mc-latestnews__card {
+    background-color: transparent;
+  }
+
+  .mc-latestnews__body {
+    padding-bottom: 0;
+
+    p {
+      margin: 0;
+    }
+  }
+}
