--- a/src/sass/_news.scss
+++ b/src/sass/_news.scss
@@ -21,6 +21,10 @@
     position: relative;
     overflow: hidden;
 
+    &--bg {
+      background-color: $c-gray;
+    }
+
     &--v2 {
       border-radius: 0;
       display: flex;
@@ -53,6 +57,32 @@
         }
       }
     }
+
+    &--v3 {
+      .mc-latestnews__header {
+        padding: 9.5px 18px;
+
+        .date {
+          font-size: 14px;
+        }
+
+        .label {
+          font-size: 10px;
+          padding: 4px 13px 4px 13px;
+        }
+      }
+
+      .mc-latestnews__body {
+        padding: 10px 18px;
+
+        p {
+          font-size: 14px;
+          line-height: 16px;
+          margin: 0;
+        }
+      }
+    }
+
   }
 
   &__image {
@@ -139,6 +169,7 @@
 
 .mc-news--full {
   background-color: $c-gray;
+  margin-top: 3px;
 
   .container-fluid, .row, .col {
     margin: 0;
@@ -161,6 +192,8 @@
     padding-bottom: 0;
 
     p {
+      font-size: 14px;
+      line-height: 16px;
       margin: 0;
     }
   }
