--- a/src/sass/_news.scss
+++ b/src/sass/_news.scss
@@ -83,6 +83,47 @@
       }
     }
 
+    &--pics {
+      border-radius: 0;
+      display: flex;
+      padding: 14px;
+
+      .mc-latestnews__image {
+        flex-shrink: 0;
+        width: 150px;
+      }
+
+      .mc-latestnews__header {
+        padding: 9.5px 18px;
+
+        .date {
+          font-size: 14px;
+        }
+
+        .label {
+          font-size: 10px;
+          padding: 4px 13px 4px 13px;
+        }
+      }
+
+      .mc-latestnews__body {
+        padding: 10px 18px;
+
+        h5 {
+          color: $c-blue-dark;
+          font-family: $font-ws;
+          font-weight: 700;
+        }
+
+        p {
+          color: $c-gray3;
+          font-size: 14px;
+          line-height: 16px;
+          margin: 10px 0 0;
+        }
+      }
+    }
+
   }
 
   &__image {
