--- a/src/sass/_library.scss
+++ b/src/sass/_library.scss
@@ -1,6 +1,86 @@
 //
-// home - latest news
+// library
 // --------------------
+
+.mc-library {
+  &__search {
+    margin-top: 50px;
+
+    &-text {
+      color: $c-gray3;
+      font: {
+        size: 14px;
+        weight: 600;
+        style: italic;
+      }
+    }
+
+    &-button {
+      align-items: center;
+      background-color: $c-blue;
+      border-radius: 50%;
+      color: $c-white;
+      display: flex;
+      height: 60px;
+      justify-content: center;
+      margin-left: auto;
+      width: 60px;
+
+      &:hover {
+        color: $c-white;
+        text-decoration: none;
+      }
+
+      i {
+        font: {
+          size: 25px;
+          weight: normal;
+        }
+      }
+    }
+
+    &-tags {
+      margin-top: 30px;
+
+      .tags {
+        padding-bottom: 0;
+
+        &__content {
+          justify-content: flex-start;
+          margin: 0;
+          padding: 0;
+        }
+      }
+    }
+
+    &-result-message {
+      text-align: center;
+      padding: 90px 0 60px 0;
+
+      p {
+        color: $c-gray5;
+        font: {
+          size: 18px;
+        }
+
+        span {
+          font: {
+            family: $font-playfair;
+            style: italic;
+          }
+        }
+      }
+    }
+
+    &-filters {
+
+    }
+
+    &-results {
+
+    }
+  }
+}
 
 .mc-latestnews,
 .mc-default {
@@ -130,48 +210,6 @@
 
         p {
           min-height: 70px;
-        }
-      }
-    }
-
-    &--result {
-      border-radius: 0;
-      display: flex;
-
-      .mc-latestnews__image {
-        flex-shrink: 0;
-        height: 170px;
-        width: 270px;
-      }
-
-      .mc-latestnews__header {
-        justify-content: flex-start;
-        padding: 9.5px 18px;
-
-        .label {
-          font-size: 10px;
-          padding: 4px 13px 4px 13px;
-
-          & + .label {
-            margin-left: 10px;
-          }
-        }
-      }
-
-      .mc-latestnews__body {
-        padding: 10px 18px;
-
-        h5 {
-          color: $c-blue-dark;
-          font-family: $font-ws;
-          font-weight: 700;
-        }
-
-        p {
-          color: $c-gray3;
-          font-size: 14px;
-          line-height: 16px;
-          margin: 10px 0 0;
         }
       }
     }
