--- a/src/sass/_library.scss
+++ b/src/sass/_library.scss
@@ -55,7 +55,7 @@
 
     &-result-message {
       text-align: center;
-      padding: 90px 0 60px 0;
+      margin: 90px 0 60px 0;
 
       p {
         color: $c-gray5;
@@ -73,11 +73,28 @@
     }
 
     &-filters {
+      margin: 0 0 85px 0;
 
-    }
+      a {
+        align-items: center;
+        background-color: $c-white;
+        border: solid 1px $c-gray5;
+        border-radius: 50%;
+        color: $c-gray3;
+        display: flex;
+        font-size: 11px;
+        height: 52px;
+        justify-content: center;
+        margin-left: auto;
+        width: 52px;
 
-    &-results {
-
+        &:hover {
+          background-color: $c-blue;
+          border: solid 1px transparent;
+          color: $c-white;
+          text-decoration: none;
+        }
+      }
     }
   }
 }
