--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -2,7 +2,23 @@
 // form
 // --------------------
 
+.custom-select {
+  border-radius: 0;
+  height: 45px;
+  font-size: 10px;
+}
+
 .form-control {
+  border-radius: 0;
+  border-color: $c-gray4;
+  font-size: 10px;
+  padding-bottom: 21.5px;
+  padding-top: 21.5px;
+
+  &:focus {
+    border-color: $c-blue;
+  }
+
   &--footer {
     background-color: rgba($footer-input-color, .21);
     border-color: rgba($footer-input-color, .21);
