--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import "_breadcrumb";
 @import "_tags";
 @import "_pagination";
+@import "_map";
 
 @import "_header";
 @import "_footer";
@@ -24,6 +25,7 @@
 @import "_activities";
 @import "_single";
 @import "_library";
+@import "_talkus";
 
 
 //
