Add instituto page structure and styles

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,6 +15,7 @@
 @import "_tags";
 @import "_pagination";
 @import "_map";
+@import "_sidebar";
 
 @import "_header";
 @import "_footer";
@@ -26,6 +27,7 @@
 @import "_single";
 @import "_library";
 @import "_talkus";
+@import "_institute";
 
 
 //
