--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -3,6 +3,13 @@
   height: auto;
   margin-left: 0px;
   position: sticky;
+  top: 0;
+  z-index: 1;
+
+  &--wrapper {
+    position: sticky;
+    top: 0;
+  }
 }
 
 .mc-sidenav a {
