--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -41,9 +41,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-p {
-  font-size: responsive;
-}
+// p {
+//   font-size: responsive;
+// }
 
 main {
   padding-bottom: 130px;
