--- a/src/sass/_institute.scss
+++ b/src/sass/_institute.scss
@@ -4,12 +4,25 @@
 
 .mc-institute {
   &--sidenav {
+    display: none;
     position: sticky;
     top: 0;
+
+    @media (min-width: 1200px) {
+      display: block;
+    }
   }
 
   &--blue {
     background-color: $c-blue-dark;
+
+    p, small {
+      color: $c-white;
+    }
+  }
+
+  &--gray {
+    background-color: $c-gray;
   }
 
   &__section {
@@ -67,10 +80,6 @@
   &__government {
     padding: 120px 0;
 
-    p, small {
-      color: $c-white;
-    }
-
     small {
       font-size: 14px;
     }
@@ -87,6 +96,54 @@
       p {
         margin: 0;
         font-weight: 700;
+      }
+    }
+  }
+
+  &__conference {
+    padding-bottom: 100px;
+    padding-top: 140px;
+  }
+
+  &__mission {
+    padding-bottom: 50px;
+    padding-top: 75px;
+
+    p {
+      color: $c-gray5;
+    }
+
+    &-button {
+      background-color: $c-blue;
+      color: $c-white;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      font-size: 22px;
+      font-weight: 700;
+      margin-top: 30px;
+      padding: 28px 40px;
+      width: 100%;
+
+      @media (min-width: 992px) {
+        margin-top: 65px;
+        padding: 28px 40px 28px 100px;
+       }
+
+      span {
+        color: rgba($c-white, .5);
+        display: block;
+        font-size: 14px;
+        font-weight: 700;
+      }
+
+      i {
+        color: rgba($c-white, .5);
+      }
+
+      &:hover {
+        color: $c-white;
+        text-decoration: none;
       }
     }
   }
