--- a/src/sass/_ourpresence.scss
+++ b/src/sass/_ourpresence.scss
@@ -1,4 +1,7 @@
 .mc-ourpresence {
+  border: 1px solid red;
+  padding-top: 0;
+
   &__text {
     padding-bottom: 0 !important;
     padding-top: 0;
