--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -2,41 +2,41 @@
 // colors
 // --------------------
 
-$main-bg-color   : #FFF;
-$main-text-color : #848484;
-$header-bg-color : #000;
+$main-bg-color: #fff;
+$main-text-color: #848484;
+$header-bg-color: #000;
 
 //basics
-$c-white : #fff;
-$c-black : #000;
-$c-blue: #3C82B9;
-$c-blue-medium : red;
-$c-blue-dark : #0F314B;
-$c-blue-light : #98C7EB;
-$c-gray : #F7F7F7;
-$c-gray2 : #9FACB7;
-$c-gray3 : #707070;
-$c-gray4 : #BCBDC1;
-$c-gray5 : #B4B4B4;
-$c-gray6 : #F8F7F8;
+$c-white: #fff;
+$c-black: #000;
+$c-blue: #3c82b9;
+$c-blue-medium: red;
+$c-blue-dark: #0f314b;
+$c-blue-light: #98c7eb;
+$c-gray: #f7f7f7;
+$c-gray2: #9facb7;
+$c-gray3: #707070;
+$c-gray4: #bcbdc1;
+$c-gray5: #b4b4b4;
+$c-gray6: #f8f7f8;
 
 //layout
-$header-secondary-bg-color : #053A64;
-$header-button-color: #3C82B9;
-$header-megamenu-link-color: #053A64;
-$header-megamenu-sublink-color: #3C82B9;
-$header-megamenu-border-color: #CCCCCC;
-$header-submenu-bg-color: #0F314B;
+$header-secondary-bg-color: #053a64;
+$header-button-color: #3c82b9;
+$header-megamenu-link-color: #053a64;
+$header-megamenu-sublink-color: #3c82b9;
+$header-megamenu-border-color: #cccccc;
+$header-submenu-bg-color: #0f314b;
 
-$footer-bg-color: #0F314B;
+$footer-bg-color: #0f314b;
 $footer-aux-color: #123652;
-$footer-input-color: #1D4A6D;
-$footer-button-color: #3C82B9;
-$footer-social-color: #3C82B9;
+$footer-input-color: #1d4a6d;
+$footer-button-color: #3c82b9;
+$footer-social-color: #3c82b9;
 $footer-border-color: #204867;
-$footer-sep-color: #17405F;
+$footer-sep-color: #17405f;
 
-$calendar1-bg-color: #3C82B9;
+$calendar1-bg-color: #3c82b9;
 $calendar2-bg-color: #326995;
-$calendar3-bg-color: #3974A3;
-$calendar-startend-color: #9EC1DC;
+$calendar3-bg-color: #3974a3;
+$calendar-startend-color: #9ec1dc;
