--- a/src/sass/_institute.scss
+++ b/src/sass/_institute.scss
@@ -100,6 +100,7 @@
     }
   }
 
+  &__founder,
   &__ourpresence,
   &__adm,
   &__house,
@@ -112,8 +113,77 @@
     }
   }
 
-  &__adm {
+  &__founder {
+    margin-bottom: 10px;
+    margin-top: 85px;
 
+  }
+
+  &__ourpresence {
+    margin-top: 85px;
+
+    .nav-tabs {
+      border-bottom: solid 2px rgba($c-blue, .1);
+      border-top: 0;
+      margin-top: 30px;
+
+      .nav-link {
+        border-bottom: solid 2px transparent;
+        font-size: 18px;
+        margin-bottom: -3px;
+        margin-top: 0;
+        padding: 10px 0 25px;
+
+        &.active,
+        &:hover,
+        &:focus {
+          border-bottom: solid 2px $c-blue;
+          border-top: 0;
+        }
+      }
+    }
+  }
+
+  &__adm {
+    margin: 90px 0;
+
+    &-title {
+      color: $c-blue-dark;
+      font-size: 24px;
+      font-weight: 700;
+      text-align: center;
+      margin-bottom: 45px;
+      margin-top: 55px;
+    }
+
+    &-big-title,
+    &-medium-title {
+      color: $c-white;
+      font-weight: 700;
+      text-align: center;
+    }
+
+    &-big-title {
+      background-color: $c-blue;
+      font-size: 35px;
+      padding: 4px 0;
+    }
+
+    &-medium-title {
+      background-color: $c-blue-dark;
+      font-size: 25px;
+      margin-bottom: 50px;
+    }
+
+    &-accordion {
+      .card {
+        margin-bottom: 26px;
+
+        &:last-child {
+          margin: 0;
+        }
+      }
+    }
   }
 
   &__house {
