--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,3 +1,7 @@
+//
+// fonts
+// --------------------
+
 // @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,400i,500,600,700');
 // @import url('https://fonts.googleapis.com/css?family=Playfair+Display|Raleway');
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800&display=swap');
