--- a/src/sass/_institute.scss
+++ b/src/sass/_institute.scss
@@ -6,7 +6,7 @@
   &--sidenav {
     display: none;
     position: sticky;
-    top: 0;
+    top: 50px;
 
     @media (min-width: 1200px) {
       display: block;
@@ -46,15 +46,21 @@
         width: 20%;
 
         &:after {
-          border-left: solid 1px rgba($color: #fff, $alpha: .1);
+          border-left: solid 1px rgba($color: $c-white, $alpha: .1);
           content: '';
           bottom: 0;
           display: block;
           right: 0;
           position: absolute;
-          top: 0;
+          top: 30%;
           height: 34px;
           width: 1px;
+        }
+
+        &:last-child {
+          &:after {
+            border: 0;
+          }
         }
       }
     }
@@ -100,6 +106,7 @@
     }
   }
 
+  &__history,
   &__founder,
   &__ourpresence,
   &__adm,
@@ -113,9 +120,30 @@
     }
   }
 
+  &__history {
+    margin-bottom: 100px;
+    margin-top: 20px;
+
+    &-title {
+      color: $c-blue-dark;
+      font-family: $font-playfair;
+      font-size: 17px;
+      font-style: italic;
+    }
+
+    &-imgfull {
+      margin-bottom: 70px;
+    }
+
+    .btn {
+      margin-top: 50px;
+    }
+  }
+
   &__founder {
     margin-bottom: 10px;
     margin-top: 85px;
+    padding-bottom: 100px;
 
   }
 
