--- a/src/sass/_highlights.scss
+++ b/src/sass/_highlights.scss
@@ -124,7 +124,8 @@
 
 .mc-highlights-tabs,
 .mc-ourpresence,
-.mc-institute__conference {
+.mc-institute__conference,
+.mc-tabs {
   padding-bottom: 80px;
   padding-top: 110px;
 
