--- a/src/sass/_institute.scss
+++ b/src/sass/_institute.scss
@@ -2,7 +2,8 @@
 // institute
 // --------------------
 
-.mc-institute {
+.mc-institute,
+.mc-ser {
   &--sidenav {
     display: none;
     position: sticky;
@@ -26,10 +27,137 @@
   }
 
   &__section {
-    // border: 1px solid red;
 
     img {
       width: 100%;
+    }
+
+    p {
+      font-size: 15px;
+      font-weight: 500;
+    }
+  }
+
+  // REMOVER
+  &__history,
+  &__founder,
+  &__ourpresence,
+  &__government,
+  &__adm,
+  &__house,
+  &__manziana,
+  &__chapter,
+  &__mission {
+    p {
+      font-size: 15px;
+      font-weight: 500;
+    }
+  }
+  // END
+
+  &__family {
+    margin-bottom: 100px;
+    margin-top: 20px;
+  }
+
+  &__brothers {
+    padding-bottom: 85px;
+    padding-top: 65px;
+  }
+
+  &__spirit,
+  &__leigos {
+    &.mc-tabs {
+      .nav-tabs {
+        border-bottom: solid 2px rgba($c-blue, .1);
+        border-top: 0;
+        margin-top: 60px;
+
+        .nav-link {
+          border-bottom: solid 2px transparent;
+          font-size: 18px;
+          margin-bottom: -3px;
+          margin-top: 0;
+          padding: 10px 0 25px;
+
+          &.active,
+          &:hover,
+          &:focus {
+            background-color: transparent;
+            border-bottom: solid 2px $c-blue;
+            border-top: 0;
+          }
+        }
+      }
+
+      .tab-content {
+        margin-top: 55px;
+
+        p, img {
+          margin: 0;
+        }
+      }
+    }
+
+    &-block {
+      background-color: $c-blue;
+      color: $c-white !important;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: 30px;
+      padding: 28px 17px !important;
+
+      @media (min-width: 992px) {
+        margin-top: 65px;
+      }
+
+      span {
+        display: block;
+        font-size: 18px;
+        font-weight: 700;
+        padding-bottom: 10px;
+
+        + span {
+          border-top: solid 1px rgba($c-white, .25);
+          color: $c-white;
+          display: block;
+          font-family: $font-playfair;
+          font-style: italic;
+          font-weight: 400;
+          padding-bottom: 0;
+          padding-top: 10px;
+        }
+      }
+
+      i {
+        color: rgba($c-white, .5);
+      }
+
+      &:hover {
+        color: $c-white;
+        text-decoration: none;
+      }
+    }
+  }
+
+  &__history {
+    margin-bottom: 100px;
+    margin-top: 20px;
+
+    &-title {
+      color: $c-blue-dark;
+      font-family: $font-playfair;
+      font-size: 17px;
+      font-style: italic;
+    }
+
+    &-imgfull {
+      margin-bottom: 70px;
+    }
+
+    .btn {
+      margin-top: 50px;
     }
   }
 
@@ -83,63 +211,6 @@
     }
   }
 
-  &__government {
-    padding: 120px 0;
-
-    small {
-      font-size: 14px;
-    }
-
-    &-card {
-      margin-top: 50px;
-    }
-
-    &-name {
-      background-color: $c-blue;
-      text-align: center;
-      padding: 16px 0;
-
-      p {
-        margin: 0;
-        font-weight: 700;
-      }
-    }
-  }
-
-  &__history,
-  &__founder,
-  &__ourpresence,
-  &__adm,
-  &__house,
-  &__manziana,
-  &__chapter,
-  &__mission {
-    p {
-      font-size: 15px;
-      font-weight: 500;
-    }
-  }
-
-  &__history {
-    margin-bottom: 100px;
-    margin-top: 20px;
-
-    &-title {
-      color: $c-blue-dark;
-      font-family: $font-playfair;
-      font-size: 17px;
-      font-style: italic;
-    }
-
-    &-imgfull {
-      margin-bottom: 70px;
-    }
-
-    .btn {
-      margin-top: 50px;
-    }
-  }
-
   &__founder {
     margin-bottom: 10px;
     margin-top: 85px;
@@ -168,6 +239,29 @@
           border-bottom: solid 2px $c-blue;
           border-top: 0;
         }
+      }
+    }
+  }
+
+  &__government {
+    padding: 120px 0;
+
+    small {
+      font-size: 14px;
+    }
+
+    &-card {
+      margin-top: 50px;
+    }
+
+    &-name {
+      background-color: $c-blue;
+      text-align: center;
+      padding: 16px 0;
+
+      p {
+        margin: 0;
+        font-weight: 700;
       }
     }
   }
