--- a/src/sass/_institute.scss
+++ b/src/sass/_institute.scss
@@ -14,6 +14,10 @@
     }
   }
 
+  &--blue-light {
+    background-color: $c-blue;
+  }
+
   &--blue {
     background-color: $c-blue-dark;
 
@@ -63,6 +67,62 @@
   &__brothers {
     padding-bottom: 85px;
     padding-top: 65px;
+
+    .main-subtitle {
+      margin-top: 50px;
+      margin-bottom: 40px;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+
+      li {
+        &:before {
+          background-color: $c-blue;
+          border-radius: 50%;
+          content: '';
+          display: inline-block;
+          height: 6px;
+          width: 6px;
+          margin-right: 10px;
+        }
+
+        margin-bottom: 16px;
+      }
+
+      li > span {
+        color: $c-gray3;
+        font-size: 15px;
+        font-weight: 500;
+      }
+    }
+
+    .blockquote {
+      margin-bottom: 55px;
+      margin-top: 40px;
+    }
+
+    .caption {
+      background-color: $c-blue;
+      color: $c-white;
+      font-family: $font-playfair;
+      font-size: 20px !important;
+      font-style: italic;
+      padding: 35px 0;
+      text-align: center;
+    }
+
+    .btn {
+      margin-top: 100px;
+    }
+  }
+
+  &__leigos {
+    table {
+      margin-bottom: 0;
+      margin-top: 30px;
+    }
   }
 
   &__spirit,
@@ -137,6 +197,75 @@
       &:hover {
         color: $c-white;
         text-decoration: none;
+      }
+    }
+  }
+
+  &__live {
+    padding-bottom: 140px;
+    padding-top: 120px;
+
+    &-videos {
+      margin-top: 80px;
+    }
+
+    .mc-default__card {
+      margin-bottom: 30px;
+
+      @media (min-width: 768px) {
+        margin-bottom: 0;
+      }
+    }
+
+    .mc-default__header {
+      justify-content: flex-start;
+
+      .date {
+        font-size: 14px;
+      }
+
+      .label {
+        font-size: 10px;
+        margin-left: 15px;
+      }
+    }
+
+    .mc-default__body {
+      padding-bottom: 20px;
+
+      p {
+        color: $c-blue-dark;
+        font-size: 18px;
+        font-weight: 700;
+        min-height: 46px;
+        margin: 0;
+      }
+    }
+  }
+
+  &__saints {
+
+    .main-title {
+      &:after {
+        background-color: $c-white;
+      }
+    }
+
+    p {
+      color: $c-white;
+    }
+
+    .bg-image {
+      background: url('https://via.placeholder.com/370x260') no-repeat center center;
+      background-size: cover;
+      height: 670px;
+    }
+
+    .btn {
+      margin-top: 80px;
+
+      &:after {
+        border-color: $c-white;
       }
     }
   }
