--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,7 +17,8 @@
 @import "_map";
 @import "_sidebar";
 @import "_accordion";
-
+@import "_blockquote";
+@import "_table";
 
 @import "_header";
 @import "_footer";
