Add missão marista page structure and styles

--- a/src/sass/_accordion.scss
+++ b/src/sass/_accordion.scss
@@ -6,10 +6,12 @@
   .card {
     background-color: transparent;
     border: 0;
+    border-radius: 0;
 
     &-header {
       background-color: $c-gray;
       border: 0;
+      border-radius: 0;
 
       .btn-link {
         align-items: center;
