--- a/src/sass/_titles.scss
+++ b/src/sass/_titles.scss
@@ -50,5 +50,6 @@ h3, .main-subtitle {
     color: $c-blue-dark;
     font-size: 24px;
     font-weight: 700;
+    text-transform: capitalize;
   }
 }
