--- a/src/sass/_institute.scss
+++ b/src/sass/_institute.scss
@@ -3,7 +3,8 @@
 // --------------------
 
 .mc-institute,
-.mc-ser {
+.mc-ser,
+.mc-mission {
   &--sidenav {
     display: none;
     position: sticky;
@@ -58,6 +59,39 @@
     }
   }
   // END
+
+  &__value {
+    margin-bottom: 120px;
+    margin-top: 20px;
+  }
+
+  &__school,
+  &__university,
+  &__publishing,
+  &__solidarity,
+  &__voluntary,
+  &__children,
+  &__pastoral,
+  &__community {
+    padding: 100px 0;
+  }
+
+  &__voluntary {
+    border-top: solid 1px rgba($c-gray3, .25);
+
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+  }
+
+  &__children {
+
+  }
+
+  &__community {
+    border-top: solid 1px rgba($c-gray3, .25);
+  }
 
   &__family {
     margin-bottom: 100px;
@@ -529,6 +563,57 @@
       &:hover {
         color: $c-white;
         text-decoration: none;
+      }
+    }
+  }
+}
+
+.mc-mission {
+  &__accordion {
+    margin-top: 90px;
+
+    .accordion {
+      .card {
+        margin-bottom: 26px;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+
+      .card-header {
+        background-color: $c-blue;
+
+        .btn-link, i {
+          color: $c-white;
+        }
+      }
+
+      .card-body {
+        margin: 30px 0;
+      }
+    }
+  }
+
+  &__carousel {
+    margin-top: 130px;
+
+    .carousel {
+      &-item {
+        background-color: $c-gray;
+        padding: 33px;
+
+        p {
+          margin: 0;
+        }
+      }
+    }
+
+    &--multi {
+      .carousel {
+        &-item {
+          padding: 0;
+        }
       }
     }
   }
