--- a/src/sass/_institute.scss
+++ b/src/sass/_institute.scss
@@ -91,8 +91,34 @@
   }
 
   &__children {
+    padding-bottom: 40px;
+
     &-search {
       margin-top: 100px;
+    }
+
+    &-cards {
+      margin-top: 85px;
+
+      .mc-default__card {
+        margin-bottom: 60px;
+      }
+      .mc-default__header {
+        .date {
+          font-size: 14px;
+        }
+      }
+      .mc-default__body {
+        padding-bottom: 0;
+        a {
+          display: flex;
+          flex-direction: column;
+        }
+
+        i {
+          margin-left: auto;
+        }
+      }
     }
   }
 
