--- a/src/sass/_news.scss
+++ b/src/sass/_news.scss
@@ -34,6 +34,11 @@
         width: 150px;
       }
 
+      .mc-default__image {
+        flex-shrink: 0;
+        width: 195px;
+      }
+
       .mc-latestnews__header {
         padding: 9.5px 18px;
 
@@ -176,6 +181,13 @@
       }
     }
 
+  }
+
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
   }
 
   &__image {
