--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -198,6 +198,38 @@ header {
               margin-left: 18px;
             }
           }
+
+          &-menu {
+            box-shadow: 0 3px 20px rgba(#000000, .16);
+            border-radius: 3px;
+            border: 0;
+            margin-top: 10px;
+            margin-left: -20px;
+            min-width: 195px;
+            text-align: center;
+          }
+
+          &-item {
+            border-left: solid 3px $c-white;;
+            color: rgba($c-gray3, .69);
+            font-size: 15px;
+            font-weight: 500;
+            padding-bottom: 10px;
+            padding-top: 10px;
+
+            &:hover {
+              &:before {
+                border-left: solid 3px $c-blue;
+                content: '';
+                display: block;
+                height: 25px;
+                left: 0;
+                position: absolute;
+              }
+              background-color: transparent;
+              color: $c-blue;
+            }
+          }
         }
       }
 
