--- a/src/sass/_accordion.scss
+++ b/src/sass/_accordion.scss
@@ -7,6 +7,11 @@
     background-color: transparent;
     border: 0;
     border-radius: 0;
+    margin-bottom: 26px;
+
+    &:last-child {
+      margin: 0;
+    }
 
     &-header {
       background-color: $c-gray;
