--- a/src/sass/_news.scss
+++ b/src/sass/_news.scss
@@ -64,7 +64,8 @@
     }
 
     &--v3 {
-      .mc-latestnews__header {
+      .mc-latestnews__header,
+      .mc-default__header {
         padding: 9.5px 18px;
 
         .date {
@@ -75,6 +76,12 @@
           font-size: 10px;
           padding: 4px 13px 4px 13px;
         }
+
+        .title {
+          color: $c-blue-dark;
+          font-weight: 700;
+          padding-left: 10px;
+        }
       }
 
       .mc-latestnews__body {
@@ -84,6 +91,28 @@
           font-size: 14px;
           line-height: 16px;
           margin: 0;
+        }
+      }
+
+      .mc-default__body {
+        padding-bottom: 40px;
+
+        p {
+          font-style: italic;
+        }
+      }
+
+      .mc-default__footer {
+        background: transparent;
+
+        ul {
+          padding: 9px 0;
+
+          li {
+            a {
+              color: $c-blue;
+            }
+          }
         }
       }
     }
