Add content and styles of instituto fundador biografia single

--- a/src/sass/_titles.scss
+++ b/src/sass/_titles.scss
@@ -22,6 +22,10 @@ h2, .main-title {
     margin-bottom: 30px;
   }
 
+  &--size20 {
+    font-size: 20px;
+  }
+
   &--white {
     color: $c-white;
   }
