--- a/src/sass/_single.scss
+++ b/src/sass/_single.scss
@@ -105,4 +105,28 @@
       font-size: 11px;
     }
   }
+
+  &__download {
+    background-color: $c-blue;
+    color: $c-white;
+    display: block;
+    font-size: 14px;
+    font-weight: 700;
+    margin: 40px auto 0;
+    max-width: 295px;
+    padding: 8px 10px;
+    text-align: center;
+    width: 100%;
+
+    &:hover {
+      color: $c-white;
+      text-decoration: none;
+    }
+  }
+
+  &__author {
+    background-color: $c-gray;
+    margin-top: 50px;
+    padding: 32px 35px;
+  }
 }
