Add content and styles of instituto fundador escritos single

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -20,6 +20,7 @@ $c-gray4: #bcbdc1;
 $c-gray5: #b4b4b4;
 $c-gray6: #f8f7f8;
 $c-gray7: #5C5C5C;
+$c-gray8: #EBEBEB;
 
 //layout
 $header-secondary-bg-color: #053a64;
