--- a/src/sass/_institute.scss
+++ b/src/sass/_institute.scss
@@ -59,6 +59,16 @@
   }
   // END
 
+  &__seealso {
+    margin-bottom: 10px;
+    margin-top: 85px;
+    padding-bottom: 100px;
+
+    &-cards {
+
+    }
+  }
+
   &__beat {
     margin-top: 160px;
 
@@ -89,8 +99,6 @@
     .btn-square {
       margin-top: 50px;
     }
-
-
   }
 
   &__value {
@@ -453,7 +461,6 @@
     margin-bottom: 10px;
     margin-top: 85px;
     padding-bottom: 100px;
-
   }
 
   &__ourpresence {
