--- a/src/sass/_single.scss
+++ b/src/sass/_single.scss
@@ -112,7 +112,8 @@
     display: block;
     font-size: 14px;
     font-weight: 700;
-    margin: 40px auto 0;
+    // margin: 40px auto 0;
+    margin: 0 auto;
     max-width: 295px;
     padding: 8px 10px;
     text-align: center;
@@ -121,6 +122,10 @@
     &:hover {
       color: $c-white;
       text-decoration: none;
+    }
+
+    &--dark-blue {
+      background-color: $c-blue-dark;
     }
   }
 
